[package]
name = "dnsclient"
version = "0.1.9"
description = "A small, simple and secure DNS client library"
authors = ["Frank Denis <github@pureftpd.org>"]
keywords = ["dns", "client"]
license = "ISC"
homepage = "https://github.com/jedisct1/rust-dnsclient"
repository = "https://github.com/jedisct1/rust-dnsclient"
categories = ["os::unix-apis"]
edition = "2018"

[dependencies]
async-std = { version = "1.9", optional = true }
dnssector = "0.2.6"
rand = "0.8"
tokio = { version = "1.9.0", optional = true, features = ["net", "io-std", "io-util", "fs", "time", "rt-multi-thread", "parking_lot"] }

[features]
async = [ "async-std" ]
async-tokio = [ "tokio" ]
default = [ "async" ]
