[package]
name = "dnsclient"
version = "0.1.18"
description = "A small, simple and secure DNS client library"
authors = ["Frank Denis <github@pureftpd.org>"]
keywords = ["dns", "client"]
license = "ISC"
homepage = "https://github.com/jedisct1/rust-dnsclient"
repository = "https://github.com/jedisct1/rust-dnsclient"
categories = ["os::unix-apis"]
edition = "2018"

[dependencies]
async-std = { version = "1.12.0", optional = true, features = ["unstable"] }
dnssector = "0.2.13"
rand = "0.8.5"
tokio = { version = "1.36.0", optional = true, features = ["full"] }

[features]
async = [ "async-std" ]
async-tokio = [ "tokio" ]
default = [ "async" ]
